@@ -1,6 +1,7 @@
 Changes in <next release>:
  * Add new export dialog box which can export multiple pages and
    modify the export options
+ * Add cubehelix() functional colormap
 
 Minor changes
  * Fix incorrect use of None in (x,...) pattern
